test_data/end_to_end/err__unicode_highlight/stderr.txt
error: binary operation `+` can't be applied to types `String`, `bool`
  --> main.cz:2:35
2 |     "перевірка 😋👌" + true
                                      ~
